Fix headline spacing
Headlines should not have more space below to the text then above

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -96,6 +96,7 @@ ul:not(.not) {
 
   h1, h2, h3, h4, h5, h6, h7, p, img, ul {
     &:not(:last-child) {
+      margin-top: 0.5rem;
       margin-bottom: 0.5rem;
     }
   }
